--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6429,9 +6429,14 @@ a.close.disabled {
 }
 
 .carousel-inner::after {
-  display: block;
-  clear: both;
-  content: "";
+  content:"";
+  display:block;
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  background: rgba(0,0,0,0.5);
 }
 
 .carousel-item {
