weekly program color update
weekly program color update

--- a/css/color/default.css
+++ b/css/color/default.css
@@ -41,6 +41,18 @@
   color: #fff;
 }
 
+.yellow {
+  color : #d2e603;
+}
+
+.pink {
+  color: #ff847c;
+}
+
+.orange {
+  color: #e79c2a;
+}
+
 .g {
   color: #006400;
 }
