--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6780,7 +6780,7 @@ button.bg-danger:focus {
   background-color: #f8f9fa !important;
 }
 .bg-light1 {
-  background-color: #006400 !important;
+  background-color: #2ca99c !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
