--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -478,7 +478,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #006400;
+  background-color: #87cef7;
   border: 1px solid #fff;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -6780,7 +6780,7 @@ button.bg-danger:focus {
   background-color: #f8f9fa !important;
 }
 .bg-light1 {
-  background-color: #2ca99c !important;
+  background-color: #87cef7 !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
