--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -478,7 +478,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #87cef7;
+  background-color: #006400;
   border: 1px solid #fff;
   border-radius: 0.25rem;
   max-width: 100%;
