--- a/css/color/default.css
+++ b/css/color/default.css
@@ -6,13 +6,13 @@
 .custom-nav.stickyadd .navbar-nav li a:active,
 .custom-nav.stickyadd .navbar-nav li.active a,
 .about-social li a:hover {
-    color: #87cef7 !important;
+    color: #006400 !important;
 }
 
 .btn-custom,
 .form-kerri .form-control:focus,
 .about-social li a:hover {
-    border-color: #87cef7;
+    border-color: #006400;
 }
 
 .btn-custom,
@@ -21,7 +21,7 @@
 .owl-theme .owl-controls .owl-page span,
 .work_menu a.active,
 .work_menu a:hover {
-    background-color: #87cef7;
+    background-color: #006400;
 }
 
 .btn-custom:hover,
@@ -33,8 +33,8 @@
 .btn-custom:focus,
 .btn-custom:hover,
 .open > .dropdown-toggle.btn-custom {
-    background-color: #87cef7;
-    border-color: #87cef7;
+    background-color: #006400;
+    border-color: #006400;
 }
 
 .white {
@@ -54,7 +54,11 @@
 }
 
 .g {
-  color: #87cef7;
+  color: #006400;
+}
+
+.black {
+  color: black;
 }
 
 .bg {
